# temporal_advesrsarial_cl

./: .gitignore  ewc_resnet32_cifar100.sh  intro.py  main.py  pacol.py  pyproject.toml  utils.py
scripts/: agem_resnet32_cifar10.sh  der_resnet32_cifar10.sh  derpp_resnet32_cifar10.sh  ewc_resnet32_cifar10.sh  ewc_resnet32_cifar100_grid.sh  gem_resnet32_cifar10.sh  gem_resnet32_cifar100.sh  hyperparameters.json  sgd_resnet32_cifar10.sh
src/: buffer_selection.py  dataloader.py  intro.py  pacol.py  resnet.py  resnet18.py  utils.py
src/cl_methods/: der.py  ewc.py  gem.py  replay.py  sgd.py
src/models/: resnet18.py  resnet32.py  vit.py
src/poisioning/: image_coruption.py  pacol.py
