[project]
name = "temporal-advesrsarial-cl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.6",
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "jax[cuda13]>=0.9.0.1",
    "optax>=0.2.8",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "qpax>=0.0.10",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
